drone-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: drone
spec:
  updateStrategy:
    type: RollingUpdate
  serviceName: drone
  template:
    metadata:
      labels:
        app: drone
        project: telephoneorg
        environment: production
    spec:
      terminationGracePeriodSeconds: 10
      nodeSelector:
        drone: 'true'
      containers:
      - name: docker
        image: docker:dind
        imagePullPolicy: IfNotPresent
        args:
        - --storage-driver=overlay2
        volumeMounts:
        - name: var-run
          mountPath: /var/run
      - name: server
        image: drone/drone:0.7
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: drone-data
          mountPath: /var/lib/drone
      - name: agent
        image: drone/drone:0.7
        args:
        - agent
        volumeMounts:
        - name: var-run
          mountPath: /var/run
      volumes:
      # - name: var-run
      #   hostPath:
      #     path: /var/run/alt-docker
      - name: var-run
        emptyDir:
          medium: memory
  volumeClaimTemplates:
  - metadata:
      name: drone-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 50Gi
