drone-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  labels:
    app: drone
    project: telephoneorg
    environment: production
spec:
  ports:
  - port: 8000
    name: http
  clusterIP: None
  selector:
    app: drone
    project: telephoneorg
    environment: production
