drone-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone-valuphone-com
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: 'nginx'
spec:
  tls:
  - hosts:
    - drone.valuphone.com
    secretName: drone-valuphone-com-tls
  rules:
  - host: drone.valuphone.com
    http:
      paths:
      - path: /
        backend:
          serviceName: drone
          servicePort: 8000
